[package]
name = "chiter"
version = "0.4.1"
authors = ["boat <boat@cock.li>", "Fabian Brand <fabian@fabianbrand.de>"]
description = "Memory editing library aimed at game hacking."
repository = "https://github.com/boatboatboatboat/chiter"
license = "MIT"
edition = "2018"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
kernel32-sys = "0.2.2"