[package]
name = "chiter"
version = "0.4.2"
authors = ["boat <boat@cock.li>", "Fabian Brand <fabian@fabianbrand.de>"]
description = "Memory editing library aimed at game hacking."
repository = "https://github.com/FabianB1998/chiter-old"
license = "MIT"
edition = "2018"

[dependencies]
detour = {version = "0.6.0", optional = true}
select-rustc = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.6"
kernel32-sys = "0.2.2"

[features]
nightly = ["detour"]
