[package]
name = "chiter"
version = "0.4.3"
authors = ["boat <boat@cock.li>", "Fabian Brand <fabian@fabianbrand.de>"]
description = "Memory editing library aimed at game hacking."
repository = "https://github.com/FabianB1998/chiter-old"
license = "MIT"
edition = "2018"

[dependencies]
detour = {version = "0.6.0", optional = true}
rustversion = "1.0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["minwindef"] }
kernel32-sys = "0.2.2"

[features]
nightly = ["detour"]
